# regression_forests

./: CMakeLists.txt  README.md  package.xml
include/rhoban_regression_forests/algorithms/: blackbox_2_tree.h  extra_trees.h
include/rhoban_regression_forests/approximations/: approximation.h  approximation_factory.h  composite_approximation.h  gp_approximation.h  pwc_approximation.h  pwl_approximation.h
include/rhoban_regression_forests/core/: forest.h  node.h  orthogonal_split.h  pruning.h  sample.h  training_set.h  tree.h
include/rhoban_regression_forests/tools/: viewer.h
include/rosban_regression_forests/algorithms/: blackbox_2_tree.h  extra_trees.h  randomized_tree.h
include/rosban_regression_forests/approximations/: approximation.h  approximation_factory.h  approximation_type.h  composite_approximation.h  gp_approximation.h  pwc_approximation.h  pwl_approximation.h
include/rosban_regression_forests/core/: forest.h  node.h  orthogonal_split.h  pruning.h  regression_forest.h  regression_node.h  regression_tree.h  sample.h  training_set.h  tree.h
include/rosban_regression_forests/tools/: parser.h  random.h  statistics.h  viewer.h
include/starkit_regression_forests/algorithms/: blackbox_2_tree.h  extra_trees.h
include/starkit_regression_forests/approximations/: approximation.h  approximation_factory.h  composite_approximation.h  gp_approximation.h  pwc_approximation.h  pwl_approximation.h
include/starkit_regression_forests/core/: forest.h  node.h  pruning.h  training_set.h  tree.h
include/starkit_regression_forests/tools/: statistics.h  viewer.h
src/: test_io.cpp  viewer.cpp
src/experiments/: test_gp_approximations.cpp
src/rhoban_regression_forests/algorithms/: blackbox_2_tree.cpp  extra_trees.cpp
src/rhoban_regression_forests/approximations/: approximation.cpp  approximation_factory.cpp  composite_approximation.cpp  gp_approximation.cpp  pwc_approximation.cpp  pwl_approximation.cpp  sources.cmake
src/rhoban_regression_forests/core/: forest.cpp  node.cpp  orthogonal_split.cpp  pruning.cpp  sample.cpp  sources.cmake  training_set.cpp  tree.cpp
src/rhoban_regression_forests/tools/: statistics.cpp  viewer.cpp
src/rosban_regression_forests/algorithms/: blackbox_2_tree.cpp  extra_trees.cpp  randomized_tree.cpp  sources.cmake
src/rosban_regression_forests/approximations/: approximation.cpp  approximation_factory.cpp  approximation_type.cpp  composite_approximation.cpp  gp_approximation.cpp  pwc_approximation.cpp  pwl_approximation.cpp  sources.cmake
src/rosban_regression_forests/core/: forest.cpp  node.cpp  orthogonal_split.cpp  pruning.cpp  regression_forest.cpp  regression_node.cpp  regression_tree.cpp  sample.cpp  sources.cmake  training_set.cpp  tree.cpp
src/rosban_regression_forests/tools/: parser.cpp  random.cpp  sources.cmake  statistics.cpp  viewer.cpp
src/starkit_regression_forests/algorithms/: blackbox_2_tree.cpp  extra_trees.cpp
src/starkit_regression_forests/approximations/: approximation.cpp  approximation_factory.cpp  composite_approximation.cpp  gp_approximation.cpp  pwc_approximation.cpp  pwl_approximation.cpp  sources.cmake
src/starkit_regression_forests/core/: forest.cpp  node.cpp  orthogonal_split.cpp  pruning.cpp  sample.cpp  training_set.cpp  tree.cpp
src/starkit_regression_forests/tools/: statistics.cpp  viewer.cpp
