<?xml version="1.0"?>
<package>
  <name>rosban_regression_forests</name>
  <version>0.0.0</version>
  <description>A package containing tools to work with regression forests</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>

  <author email="medrimonia@gmail.com">medrimonia</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>NotChosenYet</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosban_gp</build_depend> <!-- rhoban/rosban_gp.git -->
  <build_depend>rosban_viewer</build_depend> <!--optional rhoban/rosban_viewer.git -->

  <run_depend>rosban_gp</run_depend>
  <run_depend>rosban_utils</run_depend>
  <run_depend>rosban_random</run_depend>

</package>
