<?xml version="1.0"?>
<package>
  <name>rhoban_regression_forests</name>
  <version>0.0.0</version>
  <description>A package containing tools to work with regression forests</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>

  <author email="medrimonia@gmail.com">medrimonia</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>NotChosenYet</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rhoban_utils</build_depend> <!-- rhoban/utils.git -->
  <build_depend>rhoban_random</build_depend> <!-- rhoban/random.git -->
  <build_depend>rhoban_gp</build_depend> <!-- optional rhoban/gp.git -->
  <build_depend>rhoban_viewer</build_depend> <!--optional rhoban/viewer.git -->

  <run_depend>rhoban_utils</run_depend>
  <run_depend>rhoban_random</run_depend>
  <run_depend>rhoban_gp</run_depend>
  <run_depend>rhoban_random</run_depend>

</package>
