<?xml version="1.0"?>
<package>
  <name>starkit_regression_forests</name>
  <version>0.0.0</version>
  <description>A package containing tools to work with regression forests</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>

  <author email="medrimonia@gmail.com">medrimonia</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>NotChosenYet</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>starkit_utils</build_depend> <!-- StarkitRobots/utils.git -->
  <build_depend>starkit_random</build_depend> <!-- StarkitRobots/random.git -->
  <build_depend>starkit_gp</build_depend> <!-- optional StarkitRobots/gp.git -->
  <build_depend>starkit_viewer</build_depend> <!--optional StarkitRobots/viewer.git -->

  <run_depend>starkit_utils</run_depend>
  <run_depend>starkit_random</run_depend>
  <run_depend>starkit_gp</run_depend>
  <run_depend>starkit_random</run_depend>

</package>
